# target-ml

./: PROGRESS.md  target-ml-plan.md
android-app/: .gitignore
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/cpp/: CMakeLists.txt  ncnn_bridge.cpp
android-app/app/src/main/java/com/example/przestrzeliny_app/: CameraManager.java  Detection.java  MainActivity.java  PermissionHelper.java  YoloDetector.java
android-app/app/src/main/res/drawable/: target_frame_border.xml
android-app/app/src/main/res/layout/: activity_main.xml
docs/: PROGRESS.md  initial_setup.md  progress.md
ml_pipeline/: predict.py
